Update workflow to use PAT for authentication

--- a/.github/workflows/update-commit-dates.yml
+++ b/.github/workflows/update-commit-dates.yml
@@ -26,9 +26,12 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Commit and push changes
+        env:
+          ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add commit-dates.json
           git commit -m "Update commit-dates.json [skip ci]" || echo "No changes to commit"
-          git push 
+          git remote set-url origin https://x-access-token:${ACTIONS_PAT}@github.com/Av1Sharma/Av1Sharma.github.io.git
+          git push origin HEAD:${{ github.ref }} 
