--- a/.github/workflows/update-commit-dates.yml
+++ b/.github/workflows/update-commit-dates.yml
@@ -2,7 +2,7 @@ name: Update Commit Dates
 
 on:
   schedule:
-    - cron: '0 0 */2 * *'  # every 2 days at midnight
+    - cron: '30 15 * * *'  # every day at 3:30 PM
   workflow_dispatch:
 
 jobs:
